--- a/litera/_variables.scss
+++ b/litera/_variables.scss
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 $theme: "litera";
 $white: #fff;
 $gray-100: #f8f9fa;
@@ -32,8 +32,8 @@ $dark: $gray-800;
 $min-contrast-ratio: 1.85;
 $body-bg: $gray-700;
 $body-color: $white;
-$font-family-sans-serif: "Poppins",;
-$font-family-serif: Georgia,;
+$font-family-sans-serif: "Poppins";
+$font-family-serif: Georgia;
 $font-size-base: 1.1rem;
 $headings-font-weight: 700;
 $table-border-color: rgba(0, 0, 0, .1);
@@ -47,7 +47,7 @@ $btn-border-radius: 1.078em;
 $btn-border-radius-lg: 2.688em;
 $btn-border-radius-sm: .844em;
 $input-border-color: rgba(0, 0, 0, .1);
-$input-group-addon-bg: $gray-200  !default;
+$input-group-addon-bg: $gray-200 !default;
 $navbar-dark-color: rgba($white, .6);
 $navbar-dark-hover-color: $pink;
 $navbar-light-hover-color: $pink;
